--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,12 +27,16 @@
     "axios": "^1.7.9",
     "formatDate": "^1.0.0",
     "formik": "^2.4.6",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
