--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
@@ -27,13 +29,14 @@
     "axios": "^1.7.9",
     "formatDate": "^1.0.0",
     "formik": "^2.4.6",
-    "jspdf": "^3.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "multer": "^1.4.5-lts.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4",
     "xlsx": "^0.18.5",
