--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
-    "@mui/icons-material": "^6.4.5",
+    "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.4.5",
     "@mui/x-data-grid": "^7.27.0",
     "@nivo/bar": "^0.88.0",
@@ -35,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
